# esp-assembly-robot

./: .gitignore
docs/superpowers/specs/: 2026-03-29-motor-control-framework-design.md
motor_wifi_control/: AGENTS.md  CMakeLists.txt  dianlutu.md  sch.md
motor_wifi_control/main/: CMakeLists.txt  config.h  control_task.c  control_task.h  encoder_hw.c  encoder_hw.h  http_server.c  http_server.h  joint_manager.c  joint_manager.h  main.c  motor_multi.c  motor_multi.h  pd_controller.c  pd_controller.h  web_ui.cpp  web_ui.h  wifi_manager.c  wifi_manager.h
